b-switch now extends native input element

--- a/src/themes/default/fouc-prevention.css
+++ b/src/themes/default/fouc-prevention.css
@@ -1,5 +1,5 @@
 /* FOUC prevention */
-b-segmented-controls:not(.resolved) {
+b-controlgroup:not(.resolved) {
     opacity: 0;
 }
 b-tooltip:not(.resolved) {
@@ -9,5 +9,8 @@ b-dialog:not(.resolved) {
     display: none;
 }
 b-dropdown:not(.resolved) > ul {
+    display: none;
+}
+input[is='b-switch']:not(.resolved) {
     display: none;
 }
