--- a/src/themes/default/variables.css
+++ b/src/themes/default/variables.css
@@ -56,6 +56,10 @@
     --b-button-default-border: color(var(--bosonic-gray-color) blackness(var(--bosonic-border-blackness)));
     --b-button-default-color: var(--bosonic-default-font-color);
     --b-button-disabled-color: #bbb;
+
+    /*--b-button-primary-bg-gradient-start: color(var(--bosonic-primary-color) hue(+8deg) saturation(+8%));
+    --b-button-primary-bg-gradient-end: var(--bosonic-primary-color);*/
+
     --b-button-primary-bg: var(--bosonic-primary-color);
     --b-button-primary-border: color(var(--bosonic-primary-color) blackness(var(--bosonic-border-blackness)));
     --b-button-primary-color: #fff;
