Working dialog & dropdown

--- a/elements/styles/index.css
+++ b/elements/styles/index.css
@@ -1,8 +1,9 @@
 @import 'variables.css';
 
 @import 'standard-elements.css';
-@import 'fouc-prevention.css';
+/*@import 'fouc-prevention.css';*/
 @import 'transitions.css';
 
 @import 'b-listbox.css';
-
+@import 'b-menu-button.css';
+@import 'b-dialog.css';
